2014-05-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/arm/armv7/strcmp.S: Use sfi_breg prefix on loads not from sp.
	[NO_THUMB]: Cope without cbz, cnbz, and orn instructions.

2014-05-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* elf/Makefile (tst-tlsmod5.so): Add $(no-as-needed).
	(tst-tlsmod6.so): Likewise.

2014-05-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/gnu/unwind-resume.c (libgcc_s_resume): Mark as noreturn.

2014-05-09  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16064]
	* sysdeps/i386/fpu/fegetenv.c: Include <unistd.h>, <ldsodefs.h>
	and <dl-procinfo.h>.
	(__fegetenv): Save SSE state in envp->__eip if supported.
	* sysdeps/i386/fpu/feholdexcpt.c (feholdexcept): Save SSE state in
	envp->__eip if supported.
	* sysdeps/i386/fpu/fesetenv.c: Include <unistd.h>, <ldsodefs.h>
	and <dl-procinfo.h>.
	(__fesetenv): Always set __eip, __cs_selector, __opcode,
	__data_offset and __data_selector in environment to 0.  Set SSE
	state if supported.
	* sysdeps/x86/fpu/Makefile [$(subdir) = math] (tests): Add
	test-fenv-sse.
	[$(subdir) = math] (CFLAGS-test-fenv-sse.c): Add -msse2
	-mfpmath=sse.
	* sysdeps/x86/fpu/test-fenv-sse.c: New file.

2014-05-09  Will Newton  <will.newton@linaro.org>

	* sysdeps/arm/preconfigure.ac: Set libc_commonpagesize
	and libc_relro_required for ARM.
	* sysdeps/arm/preconfigure: Regenerate.

2014-05-09  Dominik Vogt  <vogt@linux.vnet.ibm.com>
	    Stefan Liebler  <stli@linux.vnet.ibm.com>

	* config.make.in (enable-lock-elision): New Makefile variable.
	* configure.ac: Likewise.
	* configure: Regenerate.
	* sysdeps/s390/configure.ac:
	Add check for gcc transactions support.
	* sysdeps/s390/configure: Regenerate.
	* nptl/sysdeps/unix/sysv/linux/s390/Makefile: New file.
	Build elision files if enabled.
	* nptl/sysdeps/unix/sysv/linux/s390/elision-conf.c: New file.
	Add lock elision support for s390.
	* nptl/sysdeps/unix/sysv/linux/s390/elision-conf.h: Likewise.